kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: streaming-app
  template:
    metadata:
      labels:
        app: streaming-app
    spec:
      containers:
      - name: streaming-app
        image: kaseykim7123/24kng_webpages:c4bac863a1513a4d3320da3b448322bb6e1ba90e
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: streaming-app-service
spec:
  selector:
    app: streaming-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: 24kng.fun
    http:
      paths:
      - path: /ko(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: streaming-app-service
            port: 
              number: 80
      - path: /ca(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: streaming-app-service
            port: 
              number: 80
      - path: /us(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: streaming-app-service
            port: 
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streaming-app-service
            port: 
              number: 80
